// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WfModuleHeader Mounts and does not focus 1`] = `
<WfModuleHeader
  focusModule={[Function]}
  isSelected={false}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="card-block p-0"
    >
      <div
        className="module-card-info"
      >
        <div
          className="module-card-header"
        >
          <div
            className="module-header-content"
          >
            <div
              className="d-flex justify-content-start align-items-center"
            >
              <div
                className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
              />
              <div
                className="t-vl-gray WFmodule-name"
              >
                Some module name
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;

exports[`WfModuleHeader Mounts and focuses 1`] = `
<WfModuleHeader
  focusModule={[Function]}
  isSelected={true}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="card-block p-0"
    >
      <div
        className="module-card-info"
      >
        <div
          className="module-card-header"
        >
          <div
            className="module-header-content"
          >
            <div
              className="d-flex justify-content-start align-items-center"
            >
              <div
                className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
              />
              <div
                className="t-vl-gray WFmodule-name"
              >
                Some module name
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;
